# webcowl

./: .gitignore  .gitmodules  README.md  data_faker.py  pyproject.toml  requiments.txt  setup.txt  todo.md
api/: base.py  config.py  requiments.txt
client/: .gitignore  .prettierrc.toml  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: OwlBox.tsx  OwlValue.tsx  RelativeTime.tsx  StyleLimits.ts  StyleRange.ts
client/src/contexts/: SharedDataProvider.tsx
client/src/pages/: WebOwl.tsx
examples/: example_owl_config.yml  owl_config.yml
webcowl/: __init__.py  app.py  config.py  session_resource.py
webcowl/common/: __init__.py  getdata.py
webcowl/cow/: __init__.py  cow_routes.py
webcowl/getdata/: __init__.py  data_faker.py  wrapper.py
webcowl/owl/: __init__.py  owl_renderer.py  owl_routes.py
webcowl/static/: webcowl.css
webcowl/templates/: base.html  home.html
webcowl/templates/cow/: _command.html  main.html
webcowl/templates/owl/: main.html
