[project]
name = "webcowl"
description ="Web based commanding and quick-look for balloon payloads"
version = "0.0.1"
requires-python = ">=3.9" # I think
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["webcowl"]
exclude = ["**/__pycache__"]
venv = "venv"
